# flamediff

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  RESEARCH.md  ROADMAP.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  rank.html
flamediff/: __init__.py  _html.py  _html_rank.py  attribute.py  calibrate.py  calibration.json  cli.py  detect.py  diff.py  mutate.py  report.py  serve.py  spectral.py  stats.py  trajectory.py  tui.py  types.py
flamediff/adapters/: _dcp_zerocopy.py  _torchrec_common.py  base.py  torchrec_mch.py  torchrec_mch_sharded.py
scripts/: attribution_demo.py  behavioral_probe.py  calibrate.py  calibrate_real.py  detect_demo.py  discover_sharded_semantics.py  generate_checkpoints.py  generate_rank_demo.py  generate_sharded.py  inspect_fixtures.py  mutation_demo.py  run_diff.py
tests/: conftest.py  test_attribute.py  test_calibrate.py  test_detect.py  test_diff.py  test_integration.py  test_mutate.py  test_report.py  test_sharded_adapter.py  test_spectral.py  test_torchrec_mch_adapter.py  test_trajectory.py  test_tui.py
