[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flamediff"
version = "0.0.1"
description = "Structural drift diffing for model checkpoints (recsys managed-collision embedding tables)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["torch>=2.0", "numpy>=1.24", "ruptures>=1.1"]

[dependency-groups]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["flamediff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a generated trajectory under fixtures/ (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
