[build-system]
requires = ["setuptools>=77"]  # >=77 for PEP 639 SPDX license metadata
build-backend = "setuptools.build_meta"

[project]
name = "flamediff"
version = "0.1.0"
description = "Structural drift diffing for model checkpoints (recsys managed-collision embedding tables)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Neel Vadoothker", email = "neel.vadoothker@gmail.com" }]
keywords = ["checkpoints", "drift", "monitoring", "embeddings", "recsys", "torchrec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.12"
dependencies = ["torch>=2.0", "numpy>=1.24", "ruptures>=1.1", "typer>=0.12"]

[project.urls]
Homepage = "https://github.com/neelvad/flamediff"
Repository = "https://github.com/neelvad/flamediff"
"Live demo" = "https://neelvad.github.io/flamediff/"

[project.optional-dependencies]
tui = ["textual>=0.60"]

[project.scripts]
flamediff = "flamediff.cli:main"
flamediff-tui = "flamediff.tui:main"

[dependency-groups]
dev = ["pytest>=7", "ruff>=0.4", "textual>=0.60"]

[tool.setuptools.packages.find]
include = ["flamediff*"]

[tool.setuptools.package-data]
# detect.py loads these FPR-calibrated thresholds at runtime; without this the wheel drops
# the file and pip installs silently fall back to raw, uncalibrated detection.
flamediff = ["calibration.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a generated trajectory under fixtures/ (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer/Click declare CLI params via calls in argument defaults -- that's the idiom, not a bug.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.per-file-ignores]
# embedded HTML/CSS/JS templates; line length isn't meaningful
"flamediff/_html.py" = ["E501"]
"flamediff/_html_rank.py" = ["E501"]
